# kot

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  kot.cabal  lizzie.cabal
examples/: factorial.kot  gcd.kot  pointers.kot  primes.kot
exe/: Main.hs
runtime/: main.c
src/Language/: Kot.hs
src/Language/Kot/: Compiler.hs  Monad.hs
src/Language/Kot/Internal/: AST.hs  Annotation.hs  CodeGen.hs  Codegen.hs  Error.hs  Parser.hs  SymbolCheck.hs  SymbolTable.hs  TypeCheck.hs  Typecheck.hs
src/Language/Kot/Internal/Util/: SymbolTable.hs  Type.hs
src/Language/Lizzie/: Compiler.hs  Monad.hs
src/Language/Lizzie/Internal/: AST.hs  Annotation.hs  Codegen.hs  Core.hs  Debug.hs  Error.hs  Parser.hs  SymbolTable.hs  Typecheck.hs
src/Language/Lizzie/Internal/Util/: SymbolTable.hs  Type.hs
test/Language/: KotTest.hs
test/Language/Kot/: CompilerTest.hs
test/Language/Lizzie/: CompilerTest.hs
test/Language/Lizzie/Internal/: ParserTest.hs
