name:                kot
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              jmalena
maintainer:          jonas.malena@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Kot
                       Language.Kot.Monad
                       Language.Kot.Internal.Annotation
                       Language.Kot.Internal.AST
                       Language.Kot.Internal.CodeGen
                       Language.Kot.Internal.Error
                       Language.Kot.Internal.Parser
                       Language.Kot.Internal.SymbolCheck
                       Language.Kot.Internal.TypeCheck
                       Language.Kot.Internal.Util.SymbolTable
                       Language.Kot.Internal.Util.Type
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       bytestring >=0.10 && <0.11,
                       containers >=0.6 && <0.7,
                       llvm-hs >=9.0 && <9.1,
                       llvm-hs-pure >=9.0 && <9.1,
                       megaparsec >=8.0 && <8.1,
                       mtl >=2.2 && <2.3,
                       parser-combinators >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable kot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       bytestring >=0.10 && <0.11,
                       kot,
                       optparse-applicative >=0.16 && <0.17
  hs-source-dirs:      exe
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  other-modules:       Language.KotTest
  build-tool-depends:  tasty-discover:tasty-discover
  build-depends:       base >=4.13 && <4.14,
                       kot,
                       bytestring >=0.10 && <0.11,
                       process >=1.6 && <1.7,
                       string-qq >=0.0 && <0.1,
                       tasty >=1.3 && <1.4,
                       tasty-discover >=4.2 && <4.3,
                       tasty-hunit >=0.10 && <0.11
  hs-source-dirs:      test
  default-language:    Haskell2010
