name:                lizzie
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              jmalena
maintainer:          jonas.malena@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Lizzie.Compiler
                       Language.Lizzie.Internal.Annotation
                       Language.Lizzie.Internal.AST
                       Language.Lizzie.Internal.Codegen
                       Language.Lizzie.Internal.Error
                       Language.Lizzie.Internal.Parser
                       Language.Lizzie.Internal.SymbolTable
                       Language.Lizzie.Internal.Typecheck
                       Language.Lizzie.Internal.Util.SymbolTable
                       Language.Lizzie.Internal.Util.Type
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14,
                       bytestring >=0.10 && <0.11,
                       containers >=0.6 && <0.7,
                       llvm-hs >=9.0 && <9.1,
                       llvm-hs-pure >=9.0 && <9.1,
                       megaparsec >=8.0 && <8.1,
                       mtl >=2.2 && <2.3,
                       parser-combinators >=1.2 && <1.3,
                       utf8-string >=1.0 && <1.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lizzie
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      exe
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  other-modules:       Language.Lizzie.CompilerTest
  build-tool-depends:  tasty-discover:tasty-discover
  build-depends:       base >=4.13 && <4.14,
                       lizzie,
                       bytestring >=0.10 && <0.11,
                       process >=1.6 && <1.7,
                       string-qq >=0.0 && <0.1,
                       tasty >=1.3 && <1.4,
                       tasty-discover >=4.2 && <4.3,
                       tasty-hunit >=0.10 && <0.11,
                       utf8-string >=1.0 && <1.1
  hs-source-dirs:      test
  default-language:    Haskell2010
